# gigaflow-cli

./: CLAUDE.md  Dockerfile  QUERYING.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
gigaflow/: README.md  __init__.py  _config.py  _fmt.py  _http.py  _setup.py  cli.py
gigaflow/commands/: __init__.py  compute.py  config.py  inspect.py  projects.py  query.py  run.py  setup.py  supplement.py  traces.py  ui.py
gigaflow/transforms/: arize_phoenix.yml  claude_code.yml  logfire.yml
tests/: _constants.py  conftest.py  test_commands.py  test_compute_printers.py  test_default_transform.py  test_load_env_file.py  test_supplement_command.py
