[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigaflow"
version = "0.1.0"
description = "GigaFlow CLI — connect Arize Phoenix traces to GigaFlow and analyze them"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GigaFlow Team"}
]
keywords = ["gigaflow", "arize", "phoenix", "llm", "observability", "tracing", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]

# Zero external deps — CLI uses stdlib only (urllib, argparse, json, etc.)
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[project.scripts]
gigaflow = "gigaflow.cli:main"

[project.urls]
Homepage = "https://github.com/GigaFlow-AI/gigaflow"
Repository = "https://github.com/GigaFlow-AI/gigaflow"

[tool.setuptools.packages.find]
where = ["."]
include = ["gigaflow*"]

[tool.setuptools.package-data]
"gigaflow.transforms" = ["*.yml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
